fixed jump after modal close globally, styling fixes for all modals

--- a/app/assets/stylesheets/event_modal.scss
+++ b/app/assets/stylesheets/event_modal.scss
@@ -31,15 +31,15 @@
       text-align: left;
 
       @include media-breakpoint-down(md) {
-        font-size: 20px;
+        font-size: 22px;
       }
 
       @include media-breakpoint-down(sm) {
-        font-size: 18px;
+        font-size: 20px;
       }
 
       @include media-breakpoint-down(xs) {
-        font-size: 15px;
+        font-size: 17px;
       }
 
     }
