--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -1,19 +1,10 @@
-//is this still required??
-.event {
-  .modal {
-    .modal-dialog {
-      width: 80vw;
-    }
-  }
-}
-
 .modal {
   padding: 0;
 
   .modal-dialog {
     margin: 10vh auto;
     max-width: $max-modal-width;
-    width: 66.6vw;
+    width: 80vw;
   }
 
   .modal-body,
